# apollo-openapi

./: Apollo-OpenAPI.yaml  README.md  apollo-openapi.yaml  clean.sh  generate.sh
rust/: Cargo.toml  README.md
rust/.openapi-generator/: FILES
rust/docs/: Change.md  ClusterDto.md  EntityPairKvEntity.md  EnvClusterInfo.md  ExceptionResponse.md  ItemChangeSets.md  ItemDto.md  KvEntity.md  ListItemDiffs.md  ListReleaseBo.md  MapString.md  MultiResponseEntity.md  NamespaceGrayDelReleaseDto.md  NamespaceIdentifier.md  NamespaceReleaseDto.md  NamespaceSyncModel.md  NamespaceTextModel.md  OpenAccessKeyDto.md  OpenAppDto.md  OpenAppNamespaceDto.md  OpenAppRoleUserDto.md  OpenClusterDto.md  OpenClusterNamespaceRoleUserDto.md  OpenCreateAppDto.md  OpenCreateItemDto.md  OpenCreateNamespaceDto.md  OpenEnvClusterDto.md  OpenEnvClusterInfo.md  OpenEnvNamespaceRoleUserDto.md  OpenGrayReleaseRuleDto.md  OpenGrayReleaseRuleItemDto.md  OpenInstanceConfigDto.md  OpenInstanceDto.md  OpenInstancePageDto.md  OpenItemChangeSets.md  OpenItemDiffDto.md  OpenItemDiffs.md  OpenItemDto.md  OpenItemExtendDto.md  OpenItemPageDto.md  (+27 more)
rust/src/apis/: configuration.rs
rust/src/models/: _openapi_v1_apps_get_401_response.rs  _openapi_v1_apps_post_400_response.rs  _openapi_v1_apps_post_request.rs  _openapi_v1_envs__env__apps__app_id__clusters__cluster_name__namespaces__namespace_name__items_validate_post_200_response.rs  _openapi_v1_envs__env__apps__app_id__clusters__cluster_name__namespaces__namespace_name__items_validate_post_400_response.rs  _openapi_v1_envs__env__releases_compare_get_200_response.rs  change.rs  cluster_dto.rs  entity_pair_kv_entity.rs  env_cluster_info.rs  exception_response.rs  item_change_sets.rs  item_dto.rs  kv_entity.rs  list_item_diffs.rs  list_release_bo.rs  map_string.rs  mod.rs  multi_response_entity.rs  namespace_gray_del_release_dto.rs  namespace_identifier.rs  namespace_release_dto.rs  namespace_sync_model.rs  namespace_text_model.rs  open_access_key_dto.rs  (+43 more)
(+1310 files in other folders)
